Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123310

[Regression] Squish build failure with QMap/qHash

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.8.0 FF
    • 6.8
    • Core: Other
    • None
    • Windows
    • 32b0a27d5 (dev)

    Description

      Building Squish sources fails with MSVC. This seems to be a regression introduced with https://codereview.qt-project.org/c/qt/qtbase/+/537530. After this patch, the compiler requires a qHash function for a PropertyIdentifierList. Before this change, there were no need for having such qHash function.

      Snippet from build output:
       

      qhashfunctions.h(319): error C2665: 'qHash': no overloaded function could convert all the argument types
      ... lots of overloads of qHash ...
      qhashfunctions.h(319): note: while trying to match the argument list '(T, size_t)'
              with
              [
                  T=Squish::PropertyIdentifierList
              ]
      

      There is no indication in the build output where the instantiation came from. There's nothing in the output about the function it should have called, likely because no qHash functions exists, and should therefore not be called.

      Full compiler output is part of internal QTBUG-123212

      Attachments

        For Gerrit Dashboard: QTBUG-123310
        # Subject Branch Project Status CR V

        Activity

          People

            mmutz Marc Mutz
            johanseg Jøger Hansegård
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes